# bardown

./: .env.dist  .gitignore  CLAUDE.md  LICENSE  LaxDB.session.sql  README.md  apply_db_schema.sh  compose.yml  dev-requirements.txt  docker-compose.yml  player-data-service.sh  player-interface.sh  pyproject.toml  requirements.txt
src/bardown_lib/: pyproject.toml  requirements.txt
src/bardown_lib/pkg/enums/: statistic_acronym.py
src/bardown_lib/pkg/mappers/: coach_mapper.py  game_mapper.py  player_mapper.py  statistics_mapper.py  team_mapper.py
src/player_data_service/: .dockerignore  .env.dist  Dockerfile  README.md  db_client.py  dockerfile  main.py  player_data_service.py  player_data_service_application.py  pyproject.toml  requirements.txt
src/player_data_service/.github/: copilot-instructions.md
src/player_data_service/api/: default_router.py  player_data_service_controller.py
src/player_data_service/api/controllers/: default_controller.py
src/player_data_service/api/validators/: players_query_validator.py
src/player_data_service/config/: db_config.py  local-compose.application.yaml  local.application.yaml  player_data_service_config.py
src/player_data_service/connectors/: mysql.py
src/player_data_service/errors/: coaches_errors.py  games_errors.py  player_validation_error.py  players_errors.py  teams_errors.py
src/player_data_service/games/: __init__.py  games_db_interface.py
src/player_data_service/games/api/: games_router.py
src/player_data_service/games/mappers/: game_mapper.py
src/player_data_service/games/models/: game_request_filters.py
src/player_data_service/players/: __init__.py  coaches_db_interface.py  player_db_interface.py  teams_db_interface.py
src/player_data_service/statistics/: __init__.py  statistics_db_interface.py
src/player_data_service/stats/: __init__.py  statistics_db_interface.py
src/player_data_service/teams/: __init__.py  teams_db_interface.py
src/player_data_service/tests/: conftest.py  constants.py  test_player_data_service.py
src/player_data_service/utils/: db_utils.py
src/player_data_service/validators/: coaches_query_validator.py  games_query_validator.py  players_query_validator.py  statistics_query_validator.py  teams_query_validator.py  validator_commons.py
src/player_interface/: .dockerignore  Dockerfile  README.md  dockerfile  main.py  player_interface.py  pyproject.toml  requirements.txt
src/player_interface/api/: player_interface_router.py
src/player_interface/api/templates/: home.html  (+7 more)
src/player_interface/client/: client_url.py
src/player_interface/config/: auth_endpoint_config.py  cache_config.py  dev.application.yaml  endpoint_config.py  local.application.yaml  player_data_service.py  player_data_service_config.py  player_data_service_endpoint_config.py  player_interface_config.py
src/player_interface/mappers/: player_filters_mapper.py  player_response_mapper.py  team_filters_mapper.py
src/player_interface/models/: composite_game_statistics.py  composite_season_statistics.py  composite_season_statistics_full.py  composite_statistics.py  game.py  game_filters.py  ordering.py  pagination.py  player.py  player_data_service_request.py  player_data_service_response.py  player_filters.py  player_statistics.py  player_with_statistics.py  players_filters.py  players_response.py  request_base.py  statistics.py  team.py  team_filters.py
src/player_interface/providers/: player_data_service_provider.py
src/player_interface/templates/: index.html
(+249 files in other folders)
