[project]
name = "bardown"
version = "0.0.1"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT License" }
authors = [{ name = "Zachary Foteff", email = "zfoteff@protonmail.com" }]
maintainers = [{ name = "Zachary Foteff", email = "zfoteff@protonmail.com" }]

[project.urls]
Homepage = "https://example.com"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"

# [tool.pylint."messages control"]
# ignore = ["setup.py", "__init__.py"]
# disable = "all"
# enable = [
#   "empty-docstring",
#   "missing-class-docstring",
#   "missing-function-docstring",
#   "missing-module-docstring"
# ]
