[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bardown_lib_zfoteff"
version = "0.0.1"
description = "Library for BarDown application"
authors = [{ name = "Zachary Foteff", email = "zfoteff@protonmail.com" }]
maintainers = [{ name = "Zachary Foteff", email = "zfoteff@protonmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Repository = "https://github.com/zfoteff/clackamas-lacrosse-application/tree/develop/src/bardown_lib"
Issues = "https://github.com/zfoteff/clackamas-lacrosse-application/issues"