[project]
name="player-interface"
dynamic = ["version"]
requires-python = ">= 3.11"
authors = [
  {name = "Zachary Foteff", email = "zfoteff@protonmail.com"},
]
maintainers = [
  {name = "Zachary Foteff", email = "zfoteff@protonmail.com"},
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"